<resources>
    <string name="genius">Genius</string>
    <string name="course">Course</string>
    <string name="forum">Forum</string>
    <string name="quiz">Quiz</string>
    <string name="stats">Stats</string>
    <string name="search">Search</string>
    <string name="aboutUs">About Us</string>
    <string name="accSettings">Account Settings</string>
    <string name="logout">Logout</string>
    <string name="recent">RECENT</string>
    <string name="whatsHot">WHAT\'S HOT</string>
    <string name="submit">Submit</string>
    <string name="retry">Retry</string>
    <string name="back">Back</string>
    <string name="result">Result</string>
    <string name="TutorCourse">Your Courses</string>
    <string name="finishCourse">Thats All for this Course !</string>
    <string name="question">Ask a Question</string>
    <string name="title">Title</string>
    <string name="question_hint">Be specific of your question</string>
    <string name="body">Body</string>
    <string name="body_text">Include all the information someone would need to answer your question</string>
    <string name="body_hint">Type your question here and explanation</string>
    <string name="cancel">Cancel</string>

    <string name="computerScience">

        Learn the key ideas of computer science with this interactive course - no coding required!\n\n
        This course is ideal for a high school or college\n\n
        hahahahhaha\n\n
        HIHIHIHI\n\n
        HOHOHOHO\n\n


    </string>

    <string name="topicCover">
        Binary\n
        Logic Gates\n
        Propositional Logic\n
        De morgan’s Laws\n

    </string>

    <string name="topicContent">
        Binary\n\n
        What is Binary ? Binary is a base 2 number system invented by\n\n
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="BinaryContent">
        What is Binary ? Binary is a base 2 number system invented by Gottfried Leibniz that is made up of only two numbers: 0 and 1.
        This number system is the basis for all binary code, which is used to write data such as the computer processor instructions used every day.

    </string>


    <string name="app_name">LoginPage</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="hello">Hello There!</string>
    <string name="email">E-mail address</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="not_member">Not a member?</string>
    <string name="forgot_password1">Forgot Password?</string>
    <string name="forgot_password_text">Forgot your password?No worries, please enter your
                                        e-mail address and you will be able to reset your
        password in no time. Any questions, please e-mail us at <font fgcolor="#173172"><u>geniuslearningapp@gmail.com</u></font></string>
    <string name="forgot_pw_email">Send Email</string>
    <string name="register_page">Register</string>
    <string name="confirm_pw">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday (DD-MM-YYYY)</string>
    <string name="register_account">Create Account</string>
    <string name="existing_user">Existing User?</string>
    <string name="log_in">Log In</string>
    <string name="terms_condition">By tapping "Create Account", you have agree to Genius </string>
    <string name="terms">Terms of Service and Privacy Policy</string>

    <string name="user_login">LoginPage</string>
    <string name="student_radio">Student</string>
    <string name="tutor_radio">Tutor</string>

    <!-- User Settings-->
    <string name="user_profile">UserProfile</string>
    <string name="desc">Profile Picture</string>
    <string name="chg_pic">Change Picture</string>
    <string name="settings">Account Settings: </string>
    <string name="personal">Personal Info</string>
    <string name="account">Account Info</string>
    <string name="personal_info">Personal Info: </string>
    <string name="user_name">Name:</string>
    <string name="first_name1">First Name</string>
    <string name="last_name1">Last Name</string>
    <string name="user_birthday">Birthday:</string>
    <string name="birthday1">DD-MM-YYYY</string>
    <string name="user_address">Address:</string>
    <string name="street">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip/Postal Code</string>
    <string name="country">Country</string>
    <string name="institution_name">Institution Name: </string>
    <string name="ins_name">Name of your current institution</string>
    <string name="update">Update Personal Info</string>
    <string name="warning">By clicking "Update Personal Info", I acknowledge that all information submitted above is factually correct</string>
    <string name="email_address_info">Email Address:</string>
    <string name="email_address_current">Current Email</string>
    <string name="current_email">Current:</string>
    <string name="new_email_text">Enter new email address</string>
    <string name="new_email">New:</string>
    <string name="password_info">Password:</string>
    <string name="password_current">Current Password</string>
    <string name="password_new">New Password</string>
    <string name="password_new_confirm">Confirm New Password</string>
    <string name="update_account">Update Account Info</string>
    <string name="warning_acc">Note: When you change your email or password, a confirmation email will be send to you. If there are any problems, please email us at
                               <font fgcolor="#173172"><u>geniuslearningapp@gmail.com</u></font></string>
    <string name="delete">Delete Account</string>

    <!--Country DropDown List-->
    <string-array name="city_list">
        <item>Bangkok</item>
        <item>London</item>
        <item>Paris</item>
        <item>Singapore</item>
        <item>New York</item>
        <item>Istanbul</item>
        <item>Dubai</item>
        <item>Kuala Lumpur</item>
        <item>Hong Kong</item>
        <item>Barcelona</item>
    </string-array>
</resources>
