<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
        android:id="@+id/ask_a_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/roboto"
        android:text="@string/question"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_question"
        android:layout_width="0dp"
        android:layout_height="91dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/rounded_corners_text"
        android:fontFamily="@font/roboto"
        android:paddingStart="10dp"
        android:shadowRadius="10"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ask_a_question" />

    <EditText
        android:id="@+id/question_text"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:hint="@string/question_hint"
        android:inputType="text"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/title_question"
        app:layout_constraintEnd_toEndOf="@+id/title_question"
        app:layout_constraintStart_toStartOf="@+id/title_question"
        app:layout_constraintTop_toTopOf="@+id/title_question" />

        <TextView
            android:id="@+id/body"
            android:layout_width="0dp"
            android:layout_height="380dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/rounded_corners_text"
            android:fontFamily="@font/roboto"
            android:paddingStart="10sp"
            android:text="@string/body"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_question" />

        <TextView
            android:id="@+id/body_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:justificationMode="inter_word"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:text="@string/body_text"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/body"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/body"
            app:layout_constraintTop_toTopOf="@+id/body" />

        <EditText
            android:id="@+id/question_text2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/body_hint"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/body"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/body"
            app:layout_constraintTop_toBottomOf="@+id/upl" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_rounded_cancel"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_rounded"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/submit"
            app:layout_constraintEnd_toStartOf="@+id/cancel"
            app:layout_constraintTop_toBottomOf="@+id/body" />

        <ImageView
            android:id="@+id/forumImg"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_marginTop="24dp"
            android:background="#A2A2A2"
            app:layout_constraintEnd_toEndOf="@+id/body"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/body"
            app:layout_constraintTop_toBottomOf="@+id/body_text" />

        <Button
            android:id="@+id/upl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/course_button"
            android:backgroundTint="#8B8B8B"
            android:padding="5dp"
            android:text="Upload Image"
            app:layout_constraintEnd_toEndOf="@+id/body"
            app:layout_constraintStart_toStartOf="@+id/body"
            app:layout_constraintTop_toBottomOf="@+id/forumImg" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>